--- a/cmd/dot/Makefile.am
+++ b/cmd/dot/Makefile.am
@@ -73,18 +73,11 @@ uninstall-hook:
 dot.1.pdf: $(srcdir)/dot.1
 	- $(GROFF) -Tps -man $(srcdir)/dot.1 | $(PS2PDF) - - >dot.1.pdf
 
-# This automagic technique for building the list of builtins requires that the
-# symbols be in the binary image, but libtool makes it difficult
-# to get a library into an image if it doesn't already resolve any symbols!
-# Workaround is to link explicity to the .libs/libxxx.a
-# A better approach is probably to provide an explicit list of builtins
-# like $(top_srcdir)/lib/gvc/dot_builtins.c
-dot_static_SOURCES = dot.c no_demand_loading.c
-dot_static_LDFLAGS = -export-dynamic -dlpreopen self -export-symbols-regex '.*_LTX_library'
+dot_static_SOURCES = dot.c dot_builtins.c no_demand_loading.c
 dot_static_LDADD = \
-	$(top_builddir)/plugin/dot_layout/.libs/libgvplugin_dot_layout_C.a \
-	$(top_builddir)/plugin/neato_layout/.libs/libgvplugin_neato_layout_C.a \
-	$(top_builddir)/plugin/core/.libs/libgvplugin_core_C.a \
+	$(top_builddir)/plugin/dot_layout/libgvplugin_dot_layout_C.la \
+	$(top_builddir)/plugin/neato_layout/libgvplugin_neato_layout_C.la \
+	$(top_builddir)/plugin/core/libgvplugin_core_C.la \
 	$(top_builddir)/lib/gvc/libgvc_C.la \
 	$(top_builddir)/lib/pathplan/libpathplan_C.la \
 	$(top_builddir)/lib/$(GRAPH)/lib$(GRAPH)_C.la \
