--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -81,7 +81,7 @@ BuildRequires: xorg-x11-devel
 %define RUBY 1
 %define GUILE 1
 %define PYTHON 1
-BuildRequires: perl ruby-devel guile-devel python-devel
+BuildRequires: perl ruby-devel guile-devel python python-devel
 %endif
 %if %rhel >= 5
 %define JAVA 1
@@ -123,7 +123,7 @@ BuildRequires: xorg-x11-devel
 %define RUBY 1
 %define GUILE 1
 %define PYTHON 1
-BuildRequires: perl ruby-devel guile-devel python-devel
+BuildRequires: perl ruby-devel guile-devel python python-devel
 %endif
 %if %att_rhel >= 5
 %define JAVA 1
@@ -163,7 +163,7 @@ BuildRequires: xorg-x11-devel
 %define RUBY 1
 %define GUILE 1
 %define PYTHON 1
-BuildRequires: libtool-ltdl libtool-ltdl-devel ruby ruby-devel guile-devel python-devel
+BuildRequires: libtool-ltdl libtool-ltdl-devel ruby ruby-devel guile-devel python python-devel
 %endif
 %if %fedora < 5
 Requires graphviz-gd
@@ -231,7 +231,7 @@ BuildRequires: xorg-x11-devel
 %define RUBY 1
 %define GUILE 1
 %define PYTHON 1
-BuildRequires: libtool-ltdl libtool-ltdl-devel ruby ruby-devel guile-devel python-devel
+BuildRequires: libtool-ltdl libtool-ltdl-devel ruby ruby-devel guile-devel python python-devel
 %endif
 %if %att_fedora < 5
 Requires graphviz-gd
