try a technique that was suggested on fedora-devel for noarch subpackages

--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -635,6 +635,9 @@ This package contains development files for graphviz.
 %package graphs
 Group:          Applications/Multimedia
 Summary:        Demo graphs for graphviz
+%if 0%{?fedora} >= 11
+BuildArch: noarch
+%endif
 
 %description graphs
 Some demo graphs for graphviz.
@@ -648,6 +651,9 @@ Some demo graphs for graphviz.
 %package doc
 Group:          Documentation
 Summary:        PDF and HTML documents for graphviz
+%if 0%{?fedora} >= 11
+BuildArch: noarch
+%endif
 
 %description doc
 Provides some additional PDF and HTML documentation for graphviz.
