--- a/graphs/undirected/Makefile.am
+++ b/graphs/undirected/Makefile.am
@@ -11,13 +11,17 @@ EXTRA_DIST = $(GRAPHS)
 
 CLEANFILES = core *.gv.* *.png .xvpics/* 
 
+# CODEGEN_FORMATS = -Tdia -Thpgl -Tmif -Tmp -Tpic -Tpcl -Tvtx
+CODEGEN_FORMATS =
+
 test:
-	$(top_builddir)/cmd/dot/dot -Kneato -Tcanon -Tcmap -Tcmapx \
-                -Tdia -Tgv -Tfig -Tgd -Tgd2 -Tgif -Thpgl \
-                -Tismap -Timap -Tjpg -Tmif -Tmp -Tpcl -Tpdf -Tpic \
-		-Tplain -Tplain-ext -Tpng -Tps -Tps2 -Tps:cairo -Tps:lasi -Tsvg \
-                -Tsvg:cairo -Tsvgz -Tvrml -Twbmp -Tvtx -Txdot \
-                -O $(GRAPHS) 
+	$(top_builddir)/cmd/dot/dot -Kneato \
+		-Tcanon -Tgv -Tplain -Tplain-ext -Txdot \
+		-Tcmap -Tcmapx -Tismap -Timap \
+		-Tjpg -Tpdf -Tfig -Tgif -Tpng \
+		-Tps -Tps2 -Tps:lasi -Tps:cairo -Tpdf \
+		-Tsvg -Tsvg:cairo -Tsvgz -Tvrml \
+		$(CODEGEN_FORMATS) -O $(GRAPHS) 
 
 #	for i in $(GRAPHS); do \
 #		echo "neato $$i"; \
