disable CODEGEN test cases

--- a/graphs/directed/Makefile.am
+++ b/graphs/directed/Makefile.am
@@ -19,20 +19,25 @@ EXTRA_DIST = $(GRAPHS)
 
 CLEANFILES = core *.gv.* *.png .xvpics/* 
 
+# CODEGEN_FORMATS = -Tdia -Thpgl -Tmif -Tmp -Tpic -Tpcl -Tvtx
+CODEGEN_FORMATS = 
+
 test:
-	$(top_builddir)/cmd/dot/dot -Tcanon -Tcmap -Tcmapx \
-		-Tdia -Tgv -Tfig -Tgif -Thpgl \
-		-Tismap -Timap -Tjpg -Tmif -Tmp -Tpcl -Tpdf -Tpic \
-		-Tplain -Tplain-ext -Tpng -Tps -Tps2 -Tps:lasi -Tps:cairo -Tsvg \
-		-Tsvg:cairo -Tsvgz -Tvrml -Tvtx -Txdot \
-		-O $(GRAPHS) 
+	$(top_builddir)/cmd/dot/dot \
+		-Tcanon -Tgv -Tplain -Tplain-ext -Txdot \
+		-Tcmap -Tcmapx -Tismap -Timap \
+		-Tjpg -Tpdf -Tfig -Tgif -Tpng \
+		-Tps -Tps2 -Tps:lasi -Tps:cairo -Tpdf \
+		-Tsvg -Tsvg:cairo -Tsvgz -Tvrml \
+		$(CODEGEN_FORMATS) -O $(GRAPHS) 
 ins_test:
-	dot -Tcanon -Tcmap -Tcmapx \
-		-Tdia -Tgv -Tfig -Tgif -Thpgl \
-		-Tismap -Timap -Tjpg -Tmif -Tmp -Tpcl -Tpdf -Tpic \
-		-Tplain -Tplain-ext -Tpng -Tps -Tps2 -Tps:lasi -Tps:cairo -Tsvg \
-		-Tsvg:cairo -Tsvgz -Tvrml -Tvtx -Txdot \
-		-O $(GRAPHS) 
+	dot \
+                -Tcanon -Tgv -Tplain -Tplain-ext -Txdot \
+                -Tcmap -Tcmapx -Tismap -Timap \
+                -Tjpg -Tpdf -Tfig -Tgif -Tpng \
+                -Tps -Tps2 -Tps:lasi -Tps:cairo -Tpdf \
+                -Tsvg -Tsvg:cairo -Tsvgz -Tvrml \
+                $(CODEGEN_FORMATS) -O $(GRAPHS) 
 
 #	for i in $(GRAPHS); do \
 #		echo "dot $$i"; \
