add VS project files to the source distribution.

--- a/lib/topfish/Makefile.am
+++ b/lib/topfish/Makefile.am
@@ -12,3 +12,5 @@ noinst_LTLIBRARIES = libtopfish_C.la
 endif
 
 libtopfish_C_la_SOURCES = hierarchy.c rescale_layout.c
+
+EXTRA_DIST = topfish.vcproj
