--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -4,6 +4,7 @@
 SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast \
 	vpsc rbtree ortho sparse patchwork expr common \
 	pack gvc xdot ingraphs topfish glcomp \
-	circogen dotgen fdpgen neatogen twopigen sfdpgen
+	circogen dotgen fdpgen neatogen twopigen sfdpgen \
+	agutil glcomp topfish xdot
 
 EXTRA_DIST = Makefile.old gvc.vcproj
