for fc11 add "BuildRequires: libgcj-devel"

--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -208,6 +208,9 @@ BuildRequires: ghostscript-devel
 #define MING 1
 #BuildRequires: ming ming-devel
 %endif
+%if %fedora >= 11
+BuildRequires: libgcj-devel
+%endif
 %endif
 
 #-- AT&T-internal Fedora specific Build Requirements --------------------------------------
@@ -273,6 +276,9 @@ BuildRequires: ghostscript-devel
 %define GHOSTSCRIPT 1
 #define MING 1
 #BuildRequires: ming ming-devel
+%endif
+%if %att_fedora >= 11
+BuildRequires: libgcj-devel
 %endif
 %endif
 
