Disable agutil/ again.   This is dead code, I think.  Doesn't compile.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -5,6 +5,6 @@ SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast \
 	vpsc rbtree ortho sparse patchwork expr common \
 	pack gvc xdot ingraphs topfish glcomp \
 	circogen dotgen fdpgen neatogen twopigen sfdpgen \
-	agutil glcomp topfish xdot
+	glcomp topfish xdot
 
 EXTRA_DIST = Makefile.old gvc.vcproj
