--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: graphviz
 Section: graphics
 Priority: optional
 Maintainer: John Ellson <ellson@graphviz.org>
+Standards-Version: 3.7.3
 Build-Depends: tk8.5-dev, tcl8.5-dev, debhelper (>= 5), libfreetype6-dev, zlib1g-dev, libjpeg62-dev, libpng12-dev, libxaw7-dev, bison, flex, autotools-dev, pdksh, libexpat1-dev, libfontconfig1-dev, libltdl3-dev, swig, libperl-dev, libgd2-noxpm-dev (>= 2.0.35), quilt (>= 0.40), groff-base, ghostscript, liblualib50-dev, ruby, ruby1.8-dev, php5-dev, php5-cli, ocaml-nox, python-dev, python-minimal, libcairo2-dev, libpango1.0-dev, guile-1.8-dev, d-shlibs, python-support, librsvg2-dev, libgdk-pixbuf-dev, libdevil-dev, libgts-dev, liblasi-dev
 Homepage: http://www.graphviz.org/
 
@@ -69,6 +70,7 @@ Package: libgv-perl
 Architecture: any
 Section: perl
 Depends: ${perl:Depends}, ${shlibs:Depends}
+Conflicts: graphviz (<< 2.12-1)
 Description: Perl bindings for graphviz
  Graphviz is a set of graph drawing tools. See the description of the graphviz
  package for a full description.
@@ -110,6 +112,7 @@ Package: libgv-tcl
 Architecture: any
 Section: interpreters
 Depends: ${shlibs:Depends}
+Conflicts: graphviz (<< 2.12-1)
 Description: Tcl bindings for graphviz
  Graphviz is a set of graph drawing tools. See the description of the graphviz
  package for a full description.
@@ -131,6 +134,8 @@ Architecture: any
 Section: libdevel
 Depends: libgraphviz4 (= ${binary:Version}), ${devlibs:Depends}
 Suggests: ocaml-base-nox-${F:OCamlABI}, ocaml-findlib
+Conflicts: graphviz-dev (<< 2.12-1), libgraphviz3-dev, libgraphviz4-dev (<< 2.16.3)
+Replaces: libgraphviz3-dev, libgraphviz4-dev (<< 2.16.3)
 Provides: graphviz-dev
 Description: graphviz libs and headers against which to build applications
  Graphviz is a set of graph drawing tools. See the description of the graphviz
@@ -146,6 +151,7 @@ Description: graphviz libs and headers against which to build applications
 Package: graphviz-doc
 Architecture: all
 Section: doc
+Conflicts: graphviz (<< 2.12-1)
 Suggests: graphviz
 Description: additional documentation for graphviz
  Graphviz is a set of graph drawing tools. See the description of the graphviz
