--- a/plugin/gd/Makefile.am
+++ b/plugin/gd/Makefile.am
@@ -59,5 +59,5 @@ if WITH_DARWIN9
 libgvplugin_gd_la_LDFLAGS += -Wl,-exported_symbol,_gvplugin_gd_LTX_library
 endif
 
-EXTRA_DIST = Makefile.old gvplugin_gd.vcproj
+EXTRA_DIST = Makefile.old gvplugin_gd.vcproj gvplugin_gd.def
 
