--- a/lib/cgraph/Makefile.am
+++ b/lib/cgraph/Makefile.am
@@ -49,6 +49,6 @@ cgraph.3.pdf: $(srcdir)/cgraph.3
 
 EXTRA_DIST = $(man_MANS) $(pdf_DATA) Makefile.old cmpnd.c \
 	main.c tester.c grammar.c grammar.h scan.c \
-	y.tab.c y.tab.h y.output cgraph.vcproj
+	y.tab.c y.tab.h y.output cgraph.vcproj cgraph.def
 
 DISTCLEANFILES = $(pdf_DATA) grammar.[ch] scan.c y.output y.tab.[ch]
