--- a/contrib/prune/prune.vcproj
+++ b/contrib/prune/prune.vcproj
@@ -60,7 +60,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="graph.lib cgraph.lib ingraphs.lib"
+				AdditionalDependencies="cgraph.lib ingraphs.lib"
 				OutputFile="c:/graphviz-ms/bin/$(ProjectName).exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="C:\graphviz-ms\bin"
@@ -135,7 +135,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="graph.lib cgraph.lib ingraphs.lib"
+				AdditionalDependencies="cgraph.lib ingraphs.lib"
 				OutputFile="c:/graphviz-ms/bin/$(ProjectName).exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="C:\graphviz-ms\bin;C:\gtk\lib"
