Look for java headers in the "more" official /usr/lib/jvm/java/include (rather than just the default include path)
This change is apparently because of a move to Sun's openjdk, and away from libgcj, now that Sun's Java is sufficiently open.

See RH Bug #486045

--- a/configure.ac
+++ b/configure.ac
@@ -724,13 +724,19 @@ else
 	case "${host_os}" in
 	  *darwin* )
             JAVA_INCLUDES="-I/System/Library/Frameworks/JavaVM.framework/Headers"
-	    JAVA_LIBS=
+	    JAVE_LIBS=
 	    ;;
 	  *)
-            JAVA_INCLUDES=
-	    JAVA_LIBS=
+            JAVA_INCLUDES="-I/usr/lib/jvm/java/include -I/usr/lib/jvm/java/include/linux"
+	    JAVE_LIBS=
 	    ;;
         esac
+        AC_ARG_WITH(javaincludedir,
+           [AS_HELP_STRING([--with-javaincludedir=DIR],[use JAVA includes from DIR])],
+          [JAVA_INCLUDES="-I$withval"])
+        AC_ARG_WITH(javalibdir,
+          [AS_HELP_STRING([--with-javalibdir=DIR],[use JAVA libraries from DIR])],
+          [JAVA_LIBS="$withval"])
 	save_CPPFLAGS=$CPPFLAGS
         CPPFLAGS="$CPPFLAGS $JAVA_INCLUDES"
         AC_CHECK_HEADER(jni.h,,[
