--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -81,7 +81,7 @@ BuildRequires: xorg-x11-devel
 %define RUBY 1
 %define GUILE 1
 %define PYTHON 1
-BuildRequires: perl ruby-devel guile-devel python python-devel
+BuildRequires: perl ruby ruby-devel guile-devel python python-devel
 %endif
 %if %rhel >= 5
 %define JAVA 1
@@ -123,7 +123,7 @@ BuildRequires: xorg-x11-devel
 %define RUBY 1
 %define GUILE 1
 %define PYTHON 1
-BuildRequires: perl ruby-devel guile-devel python python-devel
+BuildRequires: perl ruby ruby-devel guile-devel python python-devel
 %endif
 %if %att_rhel >= 5
 %define JAVA 1
