Add visual studio project files to source package build

--- a/plugin/gdiplus/Makefile.am
+++ b/plugin/gdiplus/Makefile.am
@@ -64,4 +64,4 @@ $(GDIPLUS_HEADS) : %.h : $(PLATFORMSDKINCLUDE_ESCAPED)/%.h
 	else cp "$(PLATFORMSDKINCLUDE)\$*.h" $*.h; \
 	fi
 	
-EXTRA_DIST = $(PATCHES)
+EXTRA_DIST = $(PATCHES) gvplugin_gdiplus.vcproj gvplugin_gdiplus.def
