add GVPLUGIN_CONFIG_FILENAME to config.h

--- a/configure.ac
+++ b/configure.ac
@@ -50,8 +50,10 @@ GVPLUGIN_REVISION=0
 GVPLUGIN_AGE=0
 
 GVPLUGIN_CONFIG_FILE="config$GVPLUGIN_CURRENT"
-GVPLUGIN_VERSION_INFO="$GVPLUGIN_CURRENT:$GVPLUGIN_REVISION:$GVPLUGIN_AGE"
+AC_DEFINE_UNQUOTED(GVPLUGIN_CONFIG_FILE,"$GVPLUGIN_CONFIG_FILE",[Filename for plugin configuration file.])
 AC_SUBST(GVPLUGIN_CONFIG_FILE)
+
+GVPLUGIN_VERSION_INFO="$GVPLUGIN_CURRENT:$GVPLUGIN_REVISION:$GVPLUGIN_AGE"
 AC_SUBST(GVPLUGIN_VERSION_INFO)
 
 dnl ===========================================================================
