--- a/plugin/quartz/Makefile.am
+++ b/plugin/quartz/Makefile.am
@@ -10,7 +10,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/cdt \
 	$(QUARTZ_CFLAGS)
 
-noinst_HEADERS = gvplugin_quartz.h
+noinst_HEADERS = gvplugin_quartz.h GVTextLayout.h
 
 if WITH_QUARTZ
 noinst_LTLIBRARIES = libgvplugin_quartz_C.la
