rename config-versio.h -> graphviz_version.h, distribute and install it

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,6 +12,8 @@ html =
 txt_DATA = $(txt)
 html_DATA = $(html)
 
+pkginclude_HEADERS = graphviz_version.h
+
 man_MANS = graphviz.7
 
 # $(subdirs) contains the list from: AC_CONFIG_SUBDIRS
@@ -28,7 +30,7 @@ dist-hook:
 
 EXTRA_DIST = $(txt) $(html) graphviz.spec.in graphviz.spec \
 	autogen.sh config/depcomp config/config.rpath \
-	builddate.h ast_common.h.in compat.h config_version.h \
+	builddate.h ast_common.h.in compat.h \
 	Makefile.old Config.mk.old configure.old INSTALL.old \
 	Makeargs config.h.old compat_getopt.h iffe config.iffe \
 	m4/README m4/iconv.m4 m4/lib-ld.m4 m4/lib-link.m4 m4/lib-prefix.m4 \
